--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.1",
     "react-router-dom": "^5.2.0",
