--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.1",
+    "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
